implement horizonal scroll

--- a/app/src/main/res/drawable/edit_event_menu_background.xml
+++ b/app/src/main/res/drawable/edit_event_menu_background.xml
@@ -3,5 +3,5 @@
 
         <corners android:bottomRightRadius="40dp"
             android:bottomLeftRadius="40dp"/>
-        <solid android:color="#62538C"/>
+        <solid android:color="#B78D5BE6"/>
 </shape>
