--- a/app/src/main/res/drawable/edit_event_menu_background.xml
+++ b/app/src/main/res/drawable/edit_event_menu_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <gradient
+            android:startColor="#FF333333"
+            android:endColor="#00000000"
+                android:type="linear"
+                android:angle="90"/>
 
-        <corners android:bottomRightRadius="40dp"
-            android:bottomLeftRadius="40dp"/>
-        <solid android:color="#62538C"/>
+
 </shape>
