Updated MainActivity and replaced old HomeFragment to fix annoying theme bug
MainActivity has been updated to utilize the new fragment NewHomeFragment. Removed old HomeFragment.java and its associated xml layouts for an improved UI. The unused font file has been deleted and the EventAdapter has been refactored for efficiency.

--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -43,7 +43,7 @@
                     app:tint="?android:attr/textColorSecondaryInverse" />
 
                 <TextView
-                    android:id="@+id/event_location"
+                    android:id="@+id/event_card_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
