--- a/app/src/main/res/layout/event_explore.xml
+++ b/app/src/main/res/layout/event_explore.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toBottomOf="@id/textViewOpenEvents"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <!-- Bottom Navigation View -->
 
