--- a/app/src/main/res/layout/event_vieweventdetails.xml
+++ b/app/src/main/res/layout/event_vieweventdetails.xml
@@ -8,18 +8,18 @@
     android:layout_height="match_parent">
 
 
-    <androidx.appcompat.widget.Toolbar
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/toolbar_viewing_event"
-        app:title="Event Details"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        app:navigationIcon="@drawable/back_button"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-    </androidx.appcompat.widget.Toolbar>
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:id="@+id/toolbar_viewing_event"-->
+<!--        app:title="Event Details"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        android:elevation="4dp"-->
+<!--        app:navigationIcon="@drawable/back_button"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
 
 <!--    <LinearLayout-->
