--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -33,5 +33,5 @@
           android:layout_height="wrap_content"
           android:enabled="true"
           android:id="@+id/profile_menu_item"
-          android:icon="@drawable/profile_circle"/>
+          android:icon="@drawable/baseline_account_circle_24"/>
 </menu>
