Add SwipeRefresh layout and refactor methods in EventExploreFragment
Introduced the SwipeRefreshLayout into the EventExploreFragment to enhance the refresh mechanism. Refactored and divided the onCreateView method into multiple private functions, and updated onItemClick() and displayEvents() methods for better readability and maintainability. Minor changes in Event model and layout files were also done.

--- a/app/src/main/res/layout/event_explore.xml
+++ b/app/src/main/res/layout/event_explore.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   xmlns:tools="http://schemas.android.com/tools">
 
     <!-- "Open Events" TextView -->
     <TextView
-        android:id="@+id/textViewOpenEvents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Open Events"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"/>
-
-    <!-- RecyclerView to display events -->
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listAllEvents"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewOpenEvents"
+            android:id="@+id/textViewOpenEvents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Open Events"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:padding="16dp"/>
 
-    <!-- Bottom Navigation View -->
+    <!-- RecyclerView to display events -->
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewOpenEvents"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="0dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listAllEvents"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/textViewOpenEvents"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
