Revert "Merge branch 'main' into push_notifications"
This reverts commit 641bfb8e5a3fdcb50c5372bbaefc1d08877b6055, reversing
changes made to a7451f54cc70bfe9418abf20587a37c98ebf63e7.

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -70,6 +70,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- "Scan An Event" Button -->
+            <Button
+                android:id="@+id/btnJoinEvent"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="20dp"
+                android:text="Scan An Event" />
+
             <!-- List of Joined Events -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/listJoinedEvents"
